tests/fixtures/invalid/set_div_set.py
# Cannot divide Set[int] and Set[int]
x: float = {1, 2, 3} / {1, 2, 3}
